[LinOTP] Flexigrid: Fixed spacing of column resize drag handlers

--- a/linotpd/src/linotp/public/manage/style.css
+++ b/linotpd/src/linotp/public/manage/style.css
@@ -546,6 +546,10 @@ html {
 	background: #DDDDDD;
 }
 
+.flexigrid div.nBtn {
+	height: 27px;
+}
+
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
